# redis-json-serializer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
examples/: basic_usage.py  with_aiocache.py  with_pydantic.py
src/redis_json_serializer/: __init__.py  aiocache.py  registry.py  serializer.py  types.py  utils.py
tests/: __init__.py  conftest.py  test_registry.py  test_serializer.py  test_utils.py
