[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redis-json-serializer"
version = "0.1.0"
description = "Fast and secure JSON serializer for Redis caching with Pydantic and dataclass support"
readme = "README.md"
license = {text = "MIT"}
authors = [
     {name = "seligoroff", email = "seligoroff@gmail.com"},
]
keywords = ["redis", "cache", "serialization", "json", "orjson", "pydantic", "dataclass", "aiocache"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
requires-python = ">=3.10"
dependencies = [
    "orjson>=3.9.0",
]

[project.optional-dependencies]
pydantic = ["pydantic>=2.0.0"]
mongodb = ["pymongo>=4.0.0"]
aiocache = ["aiocache>=0.12.0"]
redis = ["redis>=4.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]
all = [
    "pydantic>=2.0.0",
    "pymongo>=4.0.0",
    "aiocache>=0.12.0",
    "redis>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/seligoroff/redis-json-serializer"
Documentation = "https://redis-json-serializer.readthedocs.io"
Repository = "https://github.com/seligoroff/redis-json-serializer"
Issues = "https://github.com/seligoroff/redis-json-serializer/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/redis_json_serializer"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/__init__.py",
]
data_file = "tests/.coverage"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
show_missing = true
skip_covered = false
precision = 2

[tool.coverage.html]
directory = "tests/htmlcov"

